# m03-p0301

./: .gitignore  Project_3_1_Sau.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: config.yaml
docs/: coding-structure.md
notebooks/: Project_3_1_Sau.ipynb  baseline.ipynb  project_3_1_sau.py  runbook.ipynb
scripts/: download_data.py
src/app/: main.py  routes.py  startup.py
src/app/pages/: data_explore.py  data_processing.py  data_sampling.py  live_predict.py  model_experiments.py
src/app/services/: dataset_service.py
src/app/states/: app_state.py
src/configuration/: appsettings.py  configuration_manager.py
src/modeling/data/: back_translation.py  dataset.py  dataset_loader.py  embedding_vectorizer.py  faiss_cache.py
src/modeling/models/classifier/: adaboost_classifier.py  classifier_base.py  decision_tree_classifier.py  gaussian_nb_classifier.py  kmeans_classifier.py  knn_classifier.py  random_forest_classifier.py  stacking.py
src/modeling/models/text_encoder/: bagofword_text_vectorizer.py  tfidf_text_vectorizer.py  wordembedding_encoder.py
src/modeling/utils/: logging_utils.py  randomness_utils.py
src/modeling/visualization/: plot_metrics.py
